# LLM_Doc_Reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  WARP.md  docker-compose.override.yml  docker-compose.yml  docker-run.bat  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: README.md  build-and-run.ps1
docs/: ADVANCED_CONFIG.md  API_REFERENCE.md  INSTALLATION.md  USER_GUIDE.md
examples/: README_science_essay_example.md  agents.json  rubric.md  sample.txt  science_essay_agents.json  science_essay_rubric.md  student_essay_jumping_spiders.txt
src/auto_reviewer/: __init__.py  cli.py  config.py  embed.py  rag.py  review.py  synthesize.py  vectordb.py
src/auto_reviewer/agents/: __init__.py  crew.py  prompts.py
src/auto_reviewer/loaders/: __init__.py  docx.py  pdf.py  text.py
